# schoof-demo

./: Cargo.toml  README.md
src/: lib.rs  polynomial.rs  util.rs
