[package]
name = "schoof-demo"
version = "0.1.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.14"
num-integer = "0.1.44"
